# rust-graphql

./: .env-example  Cargo.toml  postgre-schema.sql
src/: db.rs  main.rs  paths.rs
src/handler/: mod.rs  product.rs  root.rs  user.rs
