[package]
name = "rust-graphql"
version = "0.1.0"
authors = ["yudhi kusuma <yudhie123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sqlx = { version = "0.5", features = [ "runtime-async-std-native-tls", "postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
env_logger = "0.7.1"
chrono = "0.4"
log = "0.4.8"
juniper = "0.15"